[gd_scene load_steps=19 format=3 uid="uid://c53vrr7uc3ujw"]

[ext_resource type="Texture2D" uid="uid://dp1o51sc1d1vw" path="res://CraftpixPacks/Kasaya's Frames/Inventory & chests/1/slot2.png" id="1_j5y4q"]
[ext_resource type="Script" path="res://UI/Shop2.gd" id="1_wrqfi"]
[ext_resource type="Texture2D" uid="uid://dj3jea4ujn6li" path="res://UI/item_sheet.png/1.png" id="2_nyp5d"]
[ext_resource type="Texture2D" uid="uid://cio1p5h17neih" path="res://UI/item_sheet.png/135.png" id="3_p5bt5"]
[ext_resource type="Texture2D" uid="uid://dqcjcp8pqnyni" path="res://UI/item_sheet.png/2.png" id="4_jegme"]
[ext_resource type="Texture2D" uid="uid://dcp6llw2sb0mh" path="res://UI/item_sheet.png/4.png" id="5_lv3dw"]
[ext_resource type="Texture2D" uid="uid://buh3h2fqo06qc" path="res://UI/item_sheet.png/5.png" id="6_7vifj"]
[ext_resource type="Texture2D" uid="uid://lic4skmluwro" path="res://UI/item_sheet.png/125.png" id="7_7yyd8"]
[ext_resource type="Texture2D" uid="uid://bh6fn6q0yg8h2" path="res://UI/item_sheet.png/115.png" id="8_7s6op"]
[ext_resource type="Texture2D" uid="uid://cc0x0iooecit8" path="res://Coin/1coin.png" id="9_ai010"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wn2ol"]
texture = ExtResource("1_j5y4q")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_idh6w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrrx2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_na1ho"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v2ymt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7k3px"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s0767"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1pfcd"]

[node name="Shop2" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.5
offset_top = -317.5
offset_right = 569.5
offset_bottom = 317.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrqfi")

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wn2ol")

[node name="1" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(125, 130)
texture = ExtResource("2_nyp5d")

[node name="Label2" type="Label" parent="Control/PanelContainer/1"]
offset_left = 238.5
offset_top = 113.5
offset_right = 294.5
offset_bottom = 168.5
theme_override_font_sizes/font_size = 40
text = "700"

[node name="helm" type="Button" parent="Control/PanelContainer/1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_idh6w")

[node name="135" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(680, 430)
texture = ExtResource("3_p5bt5")

[node name="Label7" type="Label" parent="Control/PanelContainer/135"]
offset_left = -28.5
offset_top = 109.5
offset_right = 17.5
offset_bottom = 164.5
theme_override_font_sizes/font_size = 40
text = "150"

[node name="red_potion" type="Button" parent="Control/PanelContainer/135"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mrrx2")

[node name="2" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(400, 130)
texture = ExtResource("4_jegme")

[node name="Label" type="Label" parent="Control/PanelContainer/2"]
offset_left = -312.5
offset_top = 113.5
offset_right = -256.5
offset_bottom = 168.5
theme_override_font_sizes/font_size = 40
text = "500"

[node name="armour" type="Button" parent="Control/PanelContainer/2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_na1ho")

[node name="4" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(680, 130)
texture = ExtResource("5_lv3dw")

[node name="Label3" type="Label" parent="Control/PanelContainer/4"]
offset_left = -24.5
offset_top = 112.5
offset_right = 21.5
offset_bottom = 167.5
theme_override_font_sizes/font_size = 40
text = "400"

[node name="boot" type="Button" parent="Control/PanelContainer/4"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_v2ymt")

[node name="5" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(970, 130)
texture = ExtResource("6_7vifj")

[node name="Label4" type="Label" parent="Control/PanelContainer/5"]
offset_left = -55.5
offset_top = 109.5
offset_right = -9.5
offset_bottom = 164.5
theme_override_font_sizes/font_size = 40
text = "600"

[node name="sword" type="Button" parent="Control/PanelContainer/5"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_7k3px")

[node name="125" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(400, 430)
texture = ExtResource("7_7yyd8")

[node name="Label6" type="Label" parent="Control/PanelContainer/125"]
offset_left = -29.5
offset_top = 112.5
offset_right = 16.5
offset_bottom = 167.5
theme_override_font_sizes/font_size = 40
text = "100"

[node name="blue_potion" type="Button" parent="Control/PanelContainer/125"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_s0767")

[node name="115" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(125, 430)
texture = ExtResource("8_7s6op")

[node name="Label5" type="Label" parent="Control/PanelContainer/115"]
offset_left = -39.5
offset_top = 113.5
offset_right = 6.5
offset_bottom = 168.5
theme_override_font_sizes/font_size = 40
text = "100"

[node name="green_potion" type="Button" parent="Control/PanelContainer/115"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -120.0
offset_right = -120.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_1pfcd")

[node name="1Coin8" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(179.5, 570)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[node name="1Coin9" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(458.5, 570)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[node name="1Coin10" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(741.5, 570)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[node name="1Coin11" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(1005.5, 270)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[node name="1Coin12" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(744.5, 270)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[node name="1Coin13" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(452.5, 270)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[node name="1Coin14" type="Sprite2D" parent="Control/PanelContainer"]
position = Vector2(178.5, 270.5)
scale = Vector2(0.0599997, 0.0575)
texture = ExtResource("9_ai010")

[connection signal="pressed" from="Control/PanelContainer/1/helm" to="Control" method="_on_helm_pressed"]
[connection signal="pressed" from="Control/PanelContainer/135/red_potion" to="Control" method="_on_red_potion_pressed"]
[connection signal="pressed" from="Control/PanelContainer/2/armour" to="Control" method="_on_armour_pressed"]
[connection signal="pressed" from="Control/PanelContainer/4/boot" to="Control" method="_on_boot_pressed"]
[connection signal="pressed" from="Control/PanelContainer/5/sword" to="Control" method="_on_sword_pressed"]
[connection signal="pressed" from="Control/PanelContainer/125/blue_potion" to="Control" method="_on_blue_potion_pressed"]
[connection signal="pressed" from="Control/PanelContainer/115/green_potion" to="Control" method="_on_green_potion_pressed"]
